--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
                     <ul>
                         <li><a href="home.html"> Home</a></li>
                         <li> <a href="intro.html">Introduction</a></li>
-                        <li> <a href="blog.html">Blog</a></li>
+                        <li> <a href="blog.html">My Project</a></li>
                         <li> <a href="contact.html">Contact Me</a></li>
                         
                     </ul>
@@ -33,34 +33,34 @@
 
 
                 <div class="blogitem">
-                    <h2>Learn HTML-In Fun way!.....</h2>
+                    <h2>Chat Bot!.....</h2>
                     <p></p>
-                    <button class="btn btn-sm"> <a href="loop2.html"> Read More</a></button>
+                    <button class="btn btn-sm"> <a href="https://dkaggarwal2512.github.io/chat_bot/"> Read More</a></button>
                 </div>
 
                 <div class="blogitem">
-                    <h2>Learn CSS-In Fun way!.....</h2>
+                    <h2>Weather Information!.....</h2>
                     <p></p>
-                    <button class="btn btn-sm"> <a href="bootstrap.css"> Read More</a></button>
+                    <button class="btn btn-sm"> <a href="https://dkaggarwal2512.github.io/weather_______information/"> Read More</a></button>
                 </div>
 
 
                 <div class="blogitem">
-                    <h2>Learn JavaScript-In Fun way!.....</h2>
+                    <h2>My Portfolio!.....</h2>
                     <p></p>
-                    <button class="btn btn-sm"> <a href="arithmatic1task.html"> Read More</a></button>
+                    <button class="btn btn-sm"> <a href="https://dkaggarwal2512.github.io/Portfolio_14.02.23/"> Read More</a></button>
                 </div>
 
                 <div class="blogitem">
-                    <h2>Learn BootStrap-In Fun way!.....</h2>
+                    <h2>Learn Bootstrap-In Fun way!.....</h2>
                     <p></p>
-                    <button class="btn btn-sm"><a href="progressbar.html">Read More</a></button>
+                    <button class="btn btn-sm"><a href="https://dkaggarwal2512.github.io/bootstrap/">Read More</a></button>
                 </div>
 
                 <div class="blogitem">
-                    <h2>Learn PHP-In Fun way!.....</h2>
+                    <h2>My Resume......</h2>
                     <p></p>
-                    <button class="btn btn-sm"> <a href="php.html"> Read More</a></button>
+                    <button class="btn btn-sm"> <a href="https://dkaggarwal2512.github.io/MY_Resume_2023/"> Read More</a></button>
                 </div>
 
                 
