--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
                     <ul>
                         <li><a href="home.html"> Home</a></li>
                         <li> <a href="intro.html">Introduction</a></li>
-                        <li> <a href="blog.html">Blog</a></li>
+                        <li> <a href="blog.html">My Project</a></li>
                         <li> <a href="contact.html">Contact Me</a></li>
                         
                     </ul>
